fix and search-filters update

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -552,7 +552,8 @@
 
   display: block;
   flex: none;
-  background-color: transparent;
+  color: transparent;
+  background-color: currentColor;
   width: 9px;
   height: 9px;
 
@@ -577,19 +578,19 @@
   }
 
   &_orange {
-    background-color: $nd-color-hotdesk;
+    color: $nd-color-hotdesk;
   }
 
   &_red {
-    background-color: $nd-color-fixeddesk;
+    color: $nd-color-fixeddesk;
   }
 
   &_blue {
-    background-color: $nd-color-meetingroom;
+    color: $nd-color-meetingroom;
   }
 
   &_green {
-    background-color: $nd-color-privateoffice;
+    color: $nd-color-privateoffice;
   }
 
   &_dark-blue {
