--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -591,6 +591,14 @@
       margin: 0 pxtovw(-4, 375);
       width: calc(100% + ((800 / 375) * 1vw));
     }
+
+    &_compress {
+      &::after {
+        display: inline-block;
+        content: '';
+        flex: 10;
+      }
+    }
   }
 
   &__check {
