--- a/app/blocks/social/social.scss
+++ b/app/blocks/social/social.scss
@@ -34,10 +34,10 @@
   line-height: 0;
   color: inherit;
   fill: currentColor;
-  transition: opacity $ease-main;
+  transition: color $ease-main;
 
   &:hover {
-    opacity: .8;
+    color: $nd-color-main;
   }
 
   &__icon {
