--- a/app/components/filter-menu/filter-menu.scss
+++ b/app/components/filter-menu/filter-menu.scss
@@ -117,24 +117,23 @@
 
   &__popup {
     position: absolute;
-    top: calc(100% + 10px);
-    left: 50%;
-    transform: translate3d(-50%, 0, 0);
+    top: calc(100% + 11px);
+    left: 0;
     opacity: 0;
     pointer-events: none;
     transition: opacity $ease-main, transform $ease-main;
     z-index: 3;
 
     @include screen('xlg', max, 2) {
-      top: calc(100% + ((1000 / 1660) * 1vw));
+      top: calc(100% + ((1100 / 1660) * 1vw));
     }
 
     @include screen('lg', max, 2) {
-      top: calc(100% + ((1000 / 1366) * 1vw));
+      top: calc(100% + ((1100 / 1366) * 1vw));
     }
 
     @include screen('md', max, 2) {
-      top: calc(100% + ((1000 / 960) * 1vw));
+      top: calc(100% + ((1100 / 960) * 1vw));
     }
 
     @include screen('sm', max, 2) {
