--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -217,6 +217,7 @@ $nd-color-blue: #1173ce;
 $nd-color-table-border: #e9eced;
 $nd-color-messenger-bg: #e8ebec;
 $nd-button-hover-color: #0094ff;
+$nd-color-filter-border: #16181c;
 
 // ##########
 // Transitions
