--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -17,7 +17,9 @@
     line-height: inherit;
     transition: background $ease-main;
     text-decoration: none;
-    text-underline-offset: 1px;
+    background-position: 0 95%;
+    background-size: 2px 2px;
+    background-repeat: repeat-x;
 
     #{$b}_underline & {
       text-decoration: underline;
@@ -26,7 +28,8 @@
 
   &:hover {
     #{$b}__text {
-      text-decoration: underline $nd-color-main;
+      background-image: linear-gradient($nd-color-main, $nd-color-main);
+      // text-decoration: underline $nd-color-main;
     }
   }
 
@@ -312,6 +315,7 @@
   &_underline:hover {
     #{$b}__text {
       text-decoration: none;
+      background-image: none;
     }
   }
 
