--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -93,6 +93,7 @@
       height: 60px;
       z-index: 10;
       top: 15px;
+      max-width: 100vw;
 
       @include screen('xlg', max, 2) {
         height: pxtovw(60, 1660);
