--- a/app/components/page-header/nd-page-header.scss
+++ b/app/components/page-header/nd-page-header.scss
@@ -325,6 +325,7 @@
     @include screen('sm', max, 2) {
       position: fixed;
       width: 100%;
+      max-width: 100vw;
       top: 0;
       left: 0;
       margin-top: 0;
